--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,12 @@
-
+.container {
+  overflow-x:hidden;
+  width:100%;
+  position:relative;
+  top:7vh;
+  height:53vh;}
+.main {
+  top:0;
+}
 
 
 .body {
